# avroc

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  Makefile  README.md  setup.cfg  setup.py  tox.ini
avroc/: __init__.py  avro_common.py  codec.py  files.py  messages.py  schema.py  util.py
avroc/codegen/: astutil.py  compiler.py  errors.py  graph.py  read.py  resolution.py  write.py
avroc/runtime/: blocks.py  encoding.py  logical.py  typetest.py
docs/: api.rst  conf.py  index.rst  install.rst  usage.rst
tests/: benchmark_compilation.py  test_compiled.py  test_compiler_graph.py  test_defaults.py  test_encoding.py  test_files.py  test_from_fastavro.py  test_resolution.py  test_schema_expansion.py  test_schema_fullnames.py  test_schema_name_gathering.py  test_schema_validation.py  tests_from_fastavro.py
