[metadata]
name = avroc
version = 0.2.1
description = A library for fast Avro serialization and deserialization
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
author = Spencer Nelson
author_email = s@spencerwnelson.com
projecturls =
    Bug Tracker = https://github.com/spenczar/avroc/issues
    Documentation = https://avroc.readthedocs.io/
    Repository = https://github.com/spenczar/avroc

[options]
packages=
        avroc
        avroc.bin
        avroc.codegen
        avroc.runtime

install_requires =
        python-snappy
        zstandard
        astunparse; python_version < "3.9.0"

tests_require =
        pytest
        fastavro

[options.entry_points]
console_scripts =
    avroc-cli = avroc.bin.avroc_cli:main

[options.extras_require]
doc =
    sphinx

dev =
    pytest
    fastavro
    flake8
    black
    mypy
    pytest
    sphinx

[mypy]
python_version = 3.8
warn_return_any = True
mypy_path = devconfig/typestubs

[mypy-plyvel]
ignore_missing_imports = True

[mypy-astropy.*]
ignore_missing_imports = True

[mypy-avro.*]
ignore_missing_imports = True

[mypy-boto3.*]
ignore_missing_imports = True

[mypy-aiobotocore.*]
ignore_missing_imports = True

[flake8]
max-line-length = 88
per-file-ignores = __init__.py:F401
